[FIX] partner_autocomplete: Corrected padding overwritting that caused image and text overlapping in dropdown item

--- a/addons/partner_autocomplete/static/src/scss/partner_autocomplete.scss
+++ b/addons/partner_autocomplete/static/src/scss/partner_autocomplete.scss
@@ -26,8 +26,8 @@
             overflow: hidden;
             text-overflow: ellipsis;
             position: relative;
-            padding-right: 50px;
-            padding-left: 40px;
+            padding-right: 50px !important;
+            padding-left: 40px !important;
             max-width: 400px;
             > img {
                 position: absolute;
